// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionButton Converter oboToSlate converts an OboNode to a Slate node 1`] = `
Object {
  "data": Object {
    "content": Object {
      "actions": Array [],
      "label": "mockLabel",
    },
  },
  "key": "mockKey",
  "object": "block",
  "type": "mockType",
}
`;

exports[`ActionButton Converter oboToSlate converts an OboNode to a Slate node using a textGroup 1`] = `
Object {
  "data": Object {
    "content": Object {
      "actions": Array [],
      "label": "mockLabel",
    },
  },
  "key": "mockKey",
  "object": "block",
  "type": "mockType",
}
`;

exports[`ActionButton Converter oboToSlate converts an OboNode to a Slate node with triggers 1`] = `
Object {
  "data": Object {
    "content": Object {
      "actions": Array [
        Object {
          "type": "mockType",
          "value": "",
        },
        Object {
          "type": "mockOtherType",
          "value": "{\\"id\\":\\"mockId\\"}",
        },
      ],
      "label": "mockLabel",
    },
  },
  "key": "mockKey",
  "object": "block",
  "type": "mockType",
}
`;

exports[`ActionButton Converter slateToObo converts a Slate node 1`] = `
Object {
  "children": Array [],
  "content": Object {
    "label": "",
    "triggers": Array [
      Object {
        "actions": Array [
          Object {
            "type": "mockType",
            "value": Object {},
          },
          Object {
            "type": "mockOtherType",
            "value": Object {
              "id": "mockId",
            },
          },
        ],
        "type": "onClick",
      },
    ],
  },
  "id": "mockKey",
  "type": "mockType",
}
`;
